; ModuleID = '/home/carl/AnghaBench/kphp-kdb/lists/extr_lists-engine.c_tl_do_list_count.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/lists/extr_lists-engine.c_tl_do_list_count.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tl_act_extra = type { i64 }
%struct.tl_list_count = type { i32, i32 }

@TL_INT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tl_do_list_count(%struct.tl_act_extra* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.tl_act_extra*, align 8
  %4 = alloca %struct.tl_list_count*, align 8
  %5 = alloca i32, align 4
  store %struct.tl_act_extra* %0, %struct.tl_act_extra** %3, align 8
  %6 = load %struct.tl_act_extra*, %struct.tl_act_extra** %3, align 8
  %7 = getelementptr inbounds %struct.tl_act_extra, %struct.tl_act_extra* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = inttoptr i64 %8 to i8*
  %10 = bitcast i8* %9 to %struct.tl_list_count*
  store %struct.tl_list_count* %10, %struct.tl_list_count** %4, align 8
  %11 = load %struct.tl_list_count*, %struct.tl_list_count** %4, align 8
  %12 = getelementptr inbounds %struct.tl_list_count, %struct.tl_list_count* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = load %struct.tl_list_count*, %struct.tl_list_count** %4, align 8
  %15 = getelementptr inbounds %struct.tl_list_count, %struct.tl_list_count* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @get_list_counter(i32 %13, i32 %16)
  store i32 %17, i32* %5, align 4
  %18 = load i32, i32* %5, align 4
  %19 = icmp eq i32 %18, -2
  br i1 %19, label %20, label %21

20:                                               ; preds = %1
  store i32 -2, i32* %2, align 4
  br label %32

21:                                               ; preds = %1
  %22 = load i32, i32* @TL_INT, align 4
  %23 = call i32 @tl_store_int(i32 %22)
  %24 = load i32, i32* %5, align 4
  %25 = icmp sge i32 %24, 0
  br i1 %25, label %26, label %28

26:                                               ; preds = %21
  %27 = load i32, i32* %5, align 4
  br label %29

28:                                               ; preds = %21
  br label %29

29:                                               ; preds = %28, %26
  %30 = phi i32 [ %27, %26 ], [ 0, %28 ]
  %31 = call i32 @tl_store_int(i32 %30)
  store i32 0, i32* %2, align 4
  br label %32

32:                                               ; preds = %29, %20
  %33 = load i32, i32* %2, align 4
  ret i32 %33
}

declare dso_local i32 @get_list_counter(i32, i32) #1

declare dso_local i32 @tl_store_int(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
